[metadata]
name = chattyboy
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = john mateer
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = chattyboy
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    chattyboy=chattyboy:main
